# ugc_sprint_2

./: .env.example  .env.prod.example  .env.test.example  .env_example  .gitattributes  .gitignore  README.md  docker-compose.override.yaml  docker-compose.yaml  postgres_tests.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
app/: Dockerfile  entrypoint.sh
app/src/: main.py
app/src/api/v1/: bookmarks.py  likes.py  reviews.py  schemas.py
app/src/core/: config.py  constants.py  logger.py
app/src/db/: mongo.py
app/src/services/: bookmarks.py  likes.py  reviews.py
app/src/utils/: json.py  jwt_and_roles.py  pagination.py
architecture/: mongo_schema.txt
generator_events/: events.py  generate_to_db.py  send_to_ugc.py
infra/: filebeat.yml  logstash.conf
infra/mongodb/: docker-compose.mongo.yaml  mongo-init.sh
infra/mongodb/init/: mongo-init.sh
infra/nginx/: nginx.conf
infra/nginx/conf.d/: app.conf
research/check_postgres/: docker-compose.yaml  postgres_tests.py  result.md
research/mongo_db/: mongo.py  result.md
tests/: Dockerfile  commands.sh  conftest.py  docker-compose.override.yaml  docker-compose.yaml  mongo.sh  pyproject.toml  test_settings.py
tests/functional/: test_bookmark.py  test_reviews.py
tests/test_data/: reviews.py  users.py
tests/utils/: jwt.py
