[tool.poetry]
name = "UGC service"
version = "1.0.0"
description = "UGC service for Online cinema"
authors = ["Python Team"]
readme = "README.md"

[tool.poetry.dependencies]
aiohttp ="^3.7.2"
cryptography = "^42.0.7"
fastapi = "^0.111.0"
faker = "^26.0.0"
flake8 = "^7.1.0"
flake8-html = "^0.4.3"
lxml = "^5.2.2"
mypy = "^1.11.0"
orjson = "^3.10.3"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
pymongo = "^4.8.0"
pyjwt = "^2.8.0"
python = "^3.10"
pytest = "^6.1.2"
pytest-asyncio = "^0.12.0"
uvicorn = "^0.29.0"
uvloop = {version = "^0.19.0", markers = "platform_python_implementation == 'CPython'"}
wemake-python-styleguide = "^0.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"