[tool.poetry]
name = "UGC service"
version = "1.0.0"
description = "UGC service for Online cinema"
authors = ["Python Team"]
readme = "README.md"

[tool.poetry.dependencies]
cryptography = "^42.0.7"
fastapi = "^0.111.0"
faker = "^26.0.0"
flake8 = "^7.1.0"
flake8-html = "^0.4.3"
lxml = "^5.2.2"
mypy = "^1.11.0"
orjson = "^3.10.3"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
pymongo = "^4.8.0"
pyjwt = "^2.8.0"
python = "^3.10"
uvicorn = "^0.29.0"
wemake-python-styleguide = "^0.19.2"
sentry-sdk = { extras = ["fastapi"], version = "^2.11.0" }
motor = "^3.5.1"
asyncpg = "^0.29.0"

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
uvloop = {version = "^0.19.0", markers = "platform_python_implementation == 'CPython'"}
gunicorn = "^22.0.0"

[tool.ruff]
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
addopts = "-rsxX -l --tb=short --strict"
testpaths = ["tests", "funcional"]
filterwarnings = "ignore::DeprecationWarning"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
