[tool.poetry]
name = "tests"
version = "0.1.0"
description = ""
authors = ["Python Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.7.2"
pytest = "^6.1.2"
pytest-asyncio = "^0.12.0"
asyncpg = "^0.29.0"
pydantic-settings = "^2.2.1"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
